ingress/tls-ssl/ingress-tls-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls: # Add this part for SSL
  - hosts:
    - myapp.com
    secretName: myapp-secret-tls # TLS secret reference
  rules:
    - host: myapp.com
      http: 
        paths:
        - path: /
          backend:
            serviceName: myapp-internal-service
            servicePort: 8080
